# Blackhole-renderer

./: .gitignore  CMakeLists.txt
renderer/: main.cpp
renderer/shaders/: fragment.glsl
